<resources>
    <string name="app_name">Dotify</string>
    <string name="first_avenger">first_avenger</string>
    <string name="change_user">CHANGE USER</string>
    <string name="strangers">Strangers</string>
    <string name="album_art_seven_lions">album art Seven Lions</string>
    <string name="song_name_seven_lions">Seven Lions featuring Tove Lo, Myon, Shane 54</string>
    <string name="_1000_plays">1000</string>
    <string name="plays">plays</string>
    <string name="all_songs_header">All Songs</string>
    <string name="enter_new_username">Enter new username</string>
    <string name="previousbutton">previousButton</string>
    <string name="playbutton">playButton</string>
    <string name="nextbutton">nextButton</string>
    <string name="apply_change_user">Apply</string>
    <string name="settings">Settings</string>
    <string name="title_artist">title - artist</string>
    <string name="shuffle">Shuffle</string>
    <string name="albumart_img_view">albumart</string>
    <string name="settings_header">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_button">Profile</string>
    <string name="about_button">About</string>
    <string name="profile_statistics">Profile Statistics</string>
    <string name="github_url">https://github.com/ss251/Dotify</string>
    <string name="app_version">Version: 1.0</string>
    <string name="creator_sailesh_sivakumar">Creator: Sailesh Sivakumar</string>
    <string name="date_created_2021_05_01">Date Created: 2021-05-01</string>
    <string name="notify_me">Notify Me</string>
</resources>