<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:padding="16dp">

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/settings"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/albumArt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/album_art_seven_lions"
        android:src="@drawable/strangers_cover_art"
        app:layout_constraintDimensionRatio="1:1"


        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSettings"
        app:layout_constraintBottom_toTopOf="@+id/songName"

        />

    <TextView
        android:id="@+id/songName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strangers"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/albumArt"
        app:layout_constraintLeft_toLeftOf="@id/albumArt"
        app:layout_constraintRight_toRightOf="@id/albumArt"
        />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_name_seven_lions"
        app:layout_constraintTop_toBottomOf="@id/songName"
        app:layout_constraintLeft_toLeftOf="@id/albumArt"
        app:layout_constraintRight_toRightOf="@id/albumArt"
        android:textSize="19sp"
        android:ellipsize="end"
        android:maxLines="1"
        />

    <TextView
        android:id="@+id/noPlays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:text="@string/_1000_plays"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/plays"
        app:layout_constraintTop_toBottomOf="@id/artistName"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/plays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/artistName"
        app:layout_constraintLeft_toRightOf="@id/noPlays"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingTop="25dp"
        android:text="@string/plays"
        />

    <ImageView
        android:id="@+id/previousButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="clickPrevious"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_previous"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/playButton"
        app:layout_constraintTop_toTopOf="@id/playButton"
        android:contentDescription="@string/previousbutton"/>

    <ImageView
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:onClick="clickPlay"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_play"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/previousButton"
        app:layout_constraintRight_toLeftOf="@id/nextButton"
        app:layout_constraintTop_toBottomOf="@id/noPlays"
        android:contentDescription="@string/playbutton"/>

    <ImageView
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:onClick="clickNext"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_next"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@id/playButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/playButton"
        android:contentDescription="@string/nextbutton"/>



</androidx.constraintlayout.widget.ConstraintLayout>