<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_avenger"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/changeUser"
        app:layout_constraintBottom_toBottomOf="@id/changeUser"
        />

    <Button
        android:id="@+id/changeUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/albumArt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/strangers_cover_art"
        app:layout_constraintRight_toRightOf="@id/changeUser"
        app:layout_constraintLeft_toLeftOf="@id/userName"
        app:layout_constraintTop_toBottomOf="@id/changeUser"
        android:contentDescription="@string/album_art_seven_lions"
        />

    <TextView
        android:id="@+id/songName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strangers"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/albumArt"
        app:layout_constraintLeft_toLeftOf="@id/albumArt"
        app:layout_constraintRight_toRightOf="@id/albumArt"
        />







</androidx.constraintlayout.widget.ConstraintLayout>